--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
   <artifactId>quarkus-spring-di-api</artifactId>
   <version>5.1.Alpha1</version>
 
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
   <properties>
     <spring-boot-bom.version>2.1.12.Final</spring-boot-bom.version>
     <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
